src/ares.output
Terminals unused in grammar

    TOK_ERROR


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main sentencias final '}'

    2 iniciar: %empty

    3 final: %empty

    4 dec_vars: %empty

    5 wrt_main: %empty

    6 declaraciones: declaracion
    7              | declaracion declaraciones

    8 declaracion: clase identificadores ';'

    9 clase: clase_escalar
   10      | clase_vector

   11 clase_escalar: tipo

   12 tipo: TOK_INT
   13     | TOK_BOOLEAN

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   15 identificadores: identificador_new
   16                | identificador_new ',' identificadores

   17 funciones: funcion funciones
   18          | %empty

   19 funcion: fn_declaration sentencias '}'

   20 fn_declaration: fn_name '(' parametros_funcion ')' '{' declaraciones_funcion

   21 fn_name: TOK_FUNCTION tipo identificador_use

   22 parametros_funcion: parametro_funcion resto_parametros_funcion
   23                   | %empty

   24 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   25                         | %empty

   26 idpf: identificador_use

   27 parametro_funcion: tipo idpf

   28 declaraciones_funcion: declaraciones
   29                      | %empty

   30 sentencias: sentencia
   31           | sentencia sentencias

   32 sentencia: sentencia_simple ';'
   33          | bloque

   34 sentencia_simple: asignacion
   35                 | auto_operador
   36                 | modulo_vector
   37                 | lectura
   38                 | escritura
   39                 | retorno_funcion
   40                 | init_vector

   41 bloque: condicional
   42       | bucle

   43 asignacion: identificador_use '=' exp
   44           | elemento_vector '=' exp

   45 auto_operador: identificador_use TOK_AUTOSUMA exp
   46              | identificador_use TOK_AUTORESTA exp
   47              | identificador_use TOK_AUTOMULT exp
   48              | identificador_use TOK_AUTODIV exp
   49              | identificador_use TOK_INCREMENTO
   50              | identificador_use TOK_DECREMENTO

   51 modulo_vector: identificador_use TOK_MODULO_VECTOR exp

   52 elemento_vector: identificador_use '[' exp ']'

   53 init_vector: TOK_INIT identificador_use '{' lista_init_v '}'

   54 lista_init_v: exp ';' lista_init_v
   55             | exp

   56 condicional: if_sentencias
   57            | if_sentencias TOK_ELSE '{' sentencias '}'
   58            | compare_greater

   59 compare_with: TOK_COMPARE exp TOK_WITH exp '{' TOK_LESS

   60 compare_less: compare_with sentencias TOK_EQUAL

   61 compare_equal: compare_less sentencias TOK_GREATER

   62 compare_greater: compare_equal sentencias '}'

   63 if_sentencias: if_exp sentencias '}'

   64 if_exp: TOK_IF '(' exp ')' '{'

   65 bucle: bucle_exp sentencias '}'
   66      | do_tok '{' sentencias '}' TOK_WHILE '(' exp ')' ';'

   67 do_tok: TOK_DO

   68 bucle_exp: bucle_tok '(' exp ')' '{'

   69 bucle_tok: TOK_WHILE

   70 lectura: TOK_SCANF identificador_use

   71 escritura: TOK_PRINTF exp

   72 retorno_funcion: TOK_RETURN exp

   73 exp: exp '+' exp
   74    | exp '-' exp
   75    | exp '/' exp
   76    | exp '*' exp
   77    | exp '^' exp
   78    | exp '%' exp
   79    | '-' exp
   80    | exp TOK_AND exp
   81    | exp TOK_OR exp
   82    | '!' exp
   83    | '~' identificador_use
   84    | identificador_use
   85    | constante
   86    | '(' exp ')'
   87    | '(' comparacion ')'
   88    | elemento_vector
   89    | llamada_funcion '(' lista_expresiones ')'

   90 llamada_funcion: identificador_use

   91 lista_expresiones: exp resto_lista_expresiones
   92                  | %empty

   93 resto_lista_expresiones: ',' exp resto_lista_expresiones
   94                        | %empty

   95 comparacion: exp TOK_IGUAL exp
   96            | exp TOK_DISTINTO exp
   97            | exp TOK_MENORIGUAL exp
   98            | exp TOK_MAYORIGUAL exp
   99            | exp '<' exp
  100            | exp '>' exp

  101 constante: constante_logica
  102          | constante_entera

  103 constante_logica: TOK_TRUE
  104                 | TOK_FALSE

  105 constante_entera: TOK_CONSTANTE_ENTERA

  106 identificador_use: TOK_IDENTIFICADOR

  107 identificador_new: TOK_IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 82
    '%' (37) 78
    '(' (40) 20 64 66 68 86 87 89
    ')' (41) 20 64 66 68 86 87 89
    '*' (42) 76
    '+' (43) 73
    ',' (44) 16 93
    '-' (45) 74 79
    '/' (47) 75
    ';' (59) 8 24 32 54 66
    '<' (60) 99
    '=' (61) 43 44
    '>' (62) 100
    '[' (91) 14 52
    ']' (93) 14 52
    '^' (94) 77
    '{' (123) 1 20 53 57 59 64 66 68
    '}' (125) 1 19 53 57 62 63 65 66
    '~' (126) 83
    error (256)
    TOK_MAIN (258) 1
    TOK_INT (259) 12
    TOK_BOOLEAN (260) 13
    TOK_ARRAY (261) 14
    TOK_FUNCTION (262) 21
    TOK_IF (263) 64
    TOK_ELSE (264) 57
    TOK_WHILE (265) 66 69
    TOK_SCANF (266) 70
    TOK_PRINTF (267) 71
    TOK_RETURN (268) 72
    TOK_INIT (269) 53
    TOK_COMPARE (270) 59
    TOK_WITH (271) 59
    TOK_LESS (272) 59
    TOK_EQUAL (273) 60
    TOK_GREATER (274) 61
    TOK_DO (275) 67
    TOK_AND (276) 80
    TOK_OR (277) 81
    TOK_IGUAL (278) 95
    TOK_DISTINTO (279) 96
    TOK_MENORIGUAL (280) 97
    TOK_MAYORIGUAL (281) 98
    TOK_MODULO_VECTOR (282) 51
    TOK_INCREMENTO (283) 49
    TOK_DECREMENTO (284) 50
    TOK_AUTOSUMA (285) 45
    TOK_AUTORESTA (286) 46
    TOK_AUTOMULT (287) 47
    TOK_AUTODIV (288) 48
    TOK_IDENTIFICADOR <attributes> (289) 106 107
    TOK_CONSTANTE_ENTERA <attributes> (290) 14 105
    TOK_TRUE (291) 103
    TOK_FALSE (292) 104
    TOK_ERROR (293)
    NEG (294)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    programa (60)
        on left: 1
        on right: 0
    iniciar (61)
        on left: 2
        on right: 1
    final (62)
        on left: 3
        on right: 1
    dec_vars (63)
        on left: 4
        on right: 1
    wrt_main (64)
        on left: 5
        on right: 1
    declaraciones (65)
        on left: 6 7
        on right: 1 7 28
    declaracion (66)
        on left: 8
        on right: 6 7
    clase (67)
        on left: 9 10
        on right: 8
    clase_escalar (68)
        on left: 11
        on right: 9
    tipo (69)
        on left: 12 13
        on right: 11 14 21 27
    clase_vector (70)
        on left: 14
        on right: 10
    identificadores (71)
        on left: 15 16
        on right: 8 16
    funciones (72)
        on left: 17 18
        on right: 1 17
    funcion <attributes> (73)
        on left: 19
        on right: 17
    fn_declaration <attributes> (74)
        on left: 20
        on right: 19
    fn_name <attributes> (75)
        on left: 21
        on right: 20
    parametros_funcion (76)
        on left: 22 23
        on right: 20
    resto_parametros_funcion (77)
        on left: 24 25
        on right: 22 24
    idpf <attributes> (78)
        on left: 26
        on right: 27
    parametro_funcion (79)
        on left: 27
        on right: 22 24
    declaraciones_funcion (80)
        on left: 28 29
        on right: 20
    sentencias (81)
        on left: 30 31
        on right: 1 19 31 57 60 61 62 63 65 66
    sentencia (82)
        on left: 32 33
        on right: 30 31
    sentencia_simple (83)
        on left: 34 35 36 37 38 39 40
        on right: 32
    bloque (84)
        on left: 41 42
        on right: 33
    asignacion (85)
        on left: 43 44
        on right: 34
    auto_operador (86)
        on left: 45 46 47 48 49 50
        on right: 35
    modulo_vector (87)
        on left: 51
        on right: 36
    elemento_vector <attributes> (88)
        on left: 52
        on right: 44 88
    init_vector (89)
        on left: 53
        on right: 40
    lista_init_v <attributes> (90)
        on left: 54 55
        on right: 53 54
    condicional <attributes> (91)
        on left: 56 57 58
        on right: 41
    compare_with <attributes> (92)
        on left: 59
        on right: 60
    compare_less <attributes> (93)
        on left: 60
        on right: 61
    compare_equal <attributes> (94)
        on left: 61
        on right: 62
    compare_greater <attributes> (95)
        on left: 62
        on right: 58
    if_sentencias <attributes> (96)
        on left: 63
        on right: 56 57
    if_exp <attributes> (97)
        on left: 64
        on right: 63
    bucle <attributes> (98)
        on left: 65 66
        on right: 42
    do_tok <attributes> (99)
        on left: 67
        on right: 66
    bucle_exp <attributes> (100)
        on left: 68
        on right: 65
    bucle_tok <attributes> (101)
        on left: 69
        on right: 68
    lectura (102)
        on left: 70
        on right: 37
    escritura (103)
        on left: 71
        on right: 38
    retorno_funcion (104)
        on left: 72
        on right: 39
    exp <attributes> (105)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 43 44 45 46 47 48 51 52 54 55 59 64 66 68 71 72 73 74 75 76 77 78 79 80 81 82 86 91 93 95 96 97 98 99 100
    llamada_funcion <attributes> (106)
        on left: 90
        on right: 89
    lista_expresiones <attributes> (107)
        on left: 91 92
        on right: 89
    resto_lista_expresiones <attributes> (108)
        on left: 93 94
        on right: 91 93
    comparacion <attributes> (109)
        on left: 95 96 97 98 99 100
        on right: 87
    constante <attributes> (110)
        on left: 101 102
        on right: 85
    constante_logica <attributes> (111)
        on left: 103 104
        on right: 101
    constante_entera <attributes> (112)
        on left: 105
        on right: 102
    identificador_use <attributes> (113)
        on left: 106
        on right: 21 26 43 45 46 47 48 49 50 51 52 53 70 83 84 90
    identificador_new <attributes> (114)
        on left: 107
        on right: 15 16


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . '{' iniciar declaraciones dec_vars funciones wrt_main sentencias final '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN '{' . iniciar declaraciones dec_vars funciones wrt_main sentencias final '}'

    $default  reduce using rule 2 (iniciar)

    iniciar  go to state 5


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    1 programa: TOK_MAIN '{' iniciar . declaraciones dec_vars funciones wrt_main sentencias final '}'

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    declaraciones  go to state 9
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 6

   12 tipo: TOK_INT .

    $default  reduce using rule 12 (tipo)


State 7

   13 tipo: TOK_BOOLEAN .

    $default  reduce using rule 13 (tipo)


State 8

   14 clase_vector: TOK_ARRAY . tipo '[' TOK_CONSTANTE_ENTERA ']'

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 15


State 9

    1 programa: TOK_MAIN '{' iniciar declaraciones . dec_vars funciones wrt_main sentencias final '}'

    $default  reduce using rule 4 (dec_vars)

    dec_vars  go to state 16


State 10

    6 declaraciones: declaracion .
    7              | declaracion . declaraciones

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 6 (declaraciones)

    declaraciones  go to state 17
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 11

    8 declaracion: clase . identificadores ';'

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores    go to state 19
    identificador_new  go to state 20


State 12

    9 clase: clase_escalar .

    $default  reduce using rule 9 (clase)


State 13

   11 clase_escalar: tipo .

    $default  reduce using rule 11 (clase_escalar)


State 14

   10 clase: clase_vector .

    $default  reduce using rule 10 (clase)


State 15

   14 clase_vector: TOK_ARRAY tipo . '[' TOK_CONSTANTE_ENTERA ']'

    '['  shift, and go to state 21


State 16

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars . funciones wrt_main sentencias final '}'

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 18 (funciones)

    funciones       go to state 23
    funcion         go to state 24
    fn_declaration  go to state 25
    fn_name         go to state 26


State 17

    7 declaraciones: declaracion declaraciones .

    $default  reduce using rule 7 (declaraciones)


State 18

  107 identificador_new: TOK_IDENTIFICADOR .

    $default  reduce using rule 107 (identificador_new)


State 19

    8 declaracion: clase identificadores . ';'

    ';'  shift, and go to state 27


State 20

   15 identificadores: identificador_new .
   16                | identificador_new . ',' identificadores

    ','  shift, and go to state 28

    $default  reduce using rule 15 (identificadores)


State 21

   14 clase_vector: TOK_ARRAY tipo '[' . TOK_CONSTANTE_ENTERA ']'

    TOK_CONSTANTE_ENTERA  shift, and go to state 29


State 22

   21 fn_name: TOK_FUNCTION . tipo identificador_use

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 30


State 23

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones . wrt_main sentencias final '}'

    $default  reduce using rule 5 (wrt_main)

    wrt_main  go to state 31


State 24

   17 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 18 (funciones)

    funciones       go to state 32
    funcion         go to state 24
    fn_declaration  go to state 25
    fn_name         go to state 26


State 25

   19 funcion: fn_declaration . sentencias '}'

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 42
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 26

   20 fn_declaration: fn_name . '(' parametros_funcion ')' '{' declaraciones_funcion

    '('  shift, and go to state 66


State 27

    8 declaracion: clase identificadores ';' .

    $default  reduce using rule 8 (declaracion)


State 28

   16 identificadores: identificador_new ',' . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores    go to state 67
    identificador_new  go to state 20


State 29

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA . ']'

    ']'  shift, and go to state 68


State 30

   21 fn_name: TOK_FUNCTION tipo . identificador_use

    TOK_IDENTIFICADOR  shift, and go to state 41

    identificador_use  go to state 69


State 31

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main . sentencias final '}'

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 70
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 32

   17 funciones: funcion funciones .

    $default  reduce using rule 17 (funciones)


State 33

   64 if_exp: TOK_IF . '(' exp ')' '{'

    '('  shift, and go to state 71


State 34

   69 bucle_tok: TOK_WHILE .

    $default  reduce using rule 69 (bucle_tok)


State 35

   70 lectura: TOK_SCANF . identificador_use

    TOK_IDENTIFICADOR  shift, and go to state 41

    identificador_use  go to state 72


State 36

   71 escritura: TOK_PRINTF . exp

    TOK_IDENTIFICADOR     shift, and go to state 41
    TOK_CONSTANTE_ENTERA  shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    TOK_FALSE             shift, and go to state 75
    '-'                   shift, and go to state 76
    '!'                   shift, and go to state 77
    '('                   shift, and go to state 78
    '~'                   shift, and go to state 79

    elemento_vector    go to state 80
    exp                go to state 81
    llamada_funcion    go to state 82
    constante          go to state 83
    constante_logica   go to state 84
    constante_entera   go to state 85
    identificador_use  go to state 86


State 37

   72 retorno_funcion: TOK_RETURN . exp

    TOK_IDENTIFICADOR     shift, and go to state 41
    TOK_CONSTANTE_ENTERA  shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    TOK_FALSE             shift, and go to state 75
    '-'                   shift, and go to state 76
    '!'                   shift, and go to state 77
    '('                   shift, and go to state 78
    '~'                   shift, and go to state 79

    elemento_vector    go to state 80
    exp                go to state 87
    llamada_funcion    go to state 82
    constante          go to state 83
    constante_logica   go to state 84
    constante_entera   go to state 85
    identificador_use  go to state 86


State 38

   53 init_vector: TOK_INIT . identificador_use '{' lista_init_v '}'

    TOK_IDENTIFICADOR  shift, and go to state 41

    identificador_use  go to state 88


State 39

   59 compare_with: TOK_COMPARE . exp TOK_WITH exp '{' TOK_LESS

    TOK_IDENTIFICADOR     shift, and go to state 41
    TOK_CONSTANTE_ENTERA  shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    TOK_FALSE             shift, and go to state 75
    '-'                   shift, and go to state 76
    '!'                   shift, and go to state 77
    '('                   shift, and go to state 78
    '~'                   shift, and go to state 79

    elemento_vector    go to state 80
    exp                go to state 89
    llamada_funcion    go to state 82
    constante          go to state 83
    constante_logica   go to state 84
    constante_entera   go to state 85
    identificador_use  go to state 86


State 40

   67 do_tok: TOK_DO .

    $default  reduce using rule 67 (do_tok)


State 41

  106 identificador_use: TOK_IDENTIFICADOR .

    $default  reduce using rule 106 (identificador_use)


State 42

   19 funcion: fn_declaration sentencias . '}'

    '}'  shift, and go to state 90


State 43

   30 sentencias: sentencia .
   31           | sentencia . sentencias

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    $default  reduce using rule 30 (sentencias)

    sentencias         go to state 91
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 44

   32 sentencia: sentencia_simple . ';'

    ';'  shift, and go to state 92


State 45

   33 sentencia: bloque .

    $default  reduce using rule 33 (sentencia)


State 46

   34 sentencia_simple: asignacion .

    $default  reduce using rule 34 (sentencia_simple)


State 47

   35 sentencia_simple: auto_operador .

    $default  reduce using rule 35 (sentencia_simple)


State 48

   36 sentencia_simple: modulo_vector .

    $default  reduce using rule 36 (sentencia_simple)


State 49

   44 asignacion: elemento_vector . '=' exp

    '='  shift, and go to state 93


State 50

   40 sentencia_simple: init_vector .

    $default  reduce using rule 40 (sentencia_simple)


State 51

   41 bloque: condicional .

    $default  reduce using rule 41 (bloque)


State 52

   60 compare_less: compare_with . sentencias TOK_EQUAL

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 94
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 53

   61 compare_equal: compare_less . sentencias TOK_GREATER

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 95
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 54

   62 compare_greater: compare_equal . sentencias '}'

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 96
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 55

   58 condicional: compare_greater .

    $default  reduce using rule 58 (condicional)


State 56

   56 condicional: if_sentencias .
   57            | if_sentencias . TOK_ELSE '{' sentencias '}'

    TOK_ELSE  shift, and go to state 97

    $default  reduce using rule 56 (condicional)


State 57

   63 if_sentencias: if_exp . sentencias '}'

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 98
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 58

   42 bloque: bucle .

    $default  reduce using rule 42 (bloque)


State 59

   66 bucle: do_tok . '{' sentencias '}' TOK_WHILE '(' exp ')' ';'

    '{'  shift, and go to state 99


State 60

   65 bucle: bucle_exp . sentencias '}'

    TOK_IF             shift, and go to state 33
    TOK_WHILE          shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_RETURN         shift, and go to state 37
    TOK_INIT           shift, and go to state 38
    TOK_COMPARE        shift, and go to state 39
    TOK_DO             shift, and go to state 40
    TOK_IDENTIFICADOR  shift, and go to state 41

    sentencias         go to state 100
    sentencia          go to state 43
    sentencia_simple   go to state 44
    bloque             go to state 45
    asignacion         go to state 46
    auto_operador      go to state 47
    modulo_vector      go to state 48
    elemento_vector    go to state 49
    init_vector        go to state 50
    condicional        go to state 51
    compare_with       go to state 52
    compare_less       go to state 53
    compare_equal      go to state 54
    compare_greater    go to state 55
    if_sentencias      go to state 56
    if_exp             go to state 57
    bucle              go to state 58
    do_tok             go to state 59
    bucle_exp          go to state 60
    bucle_tok          go to state 61
    lectura            go to state 62
    escritura          go to state 63
    retorno_funcion    go to state 64
    identificador_use  go to state 65


State 61

   68 bucle_exp: bucle_tok . '(' exp ')' '{'

    '('  shift, and go to state 101


State 62

   37 sentencia_simple: lectura .

    $default  reduce using rule 37 (sentencia_simple)


State 63

   38 sentencia_simple: escritura .

    $default  reduce using rule 38 (sentencia_simple)


State 64

   39 sentencia_simple: retorno_funcion .

    $default  reduce using rule 39 (sentencia_simple)


State 65

   43 asignacion: identificador_use . '=' exp
   45 auto_operador: identificador_use . TOK_AUTOSUMA exp
   46              | identificador_use . TOK_AUTORESTA exp
   47              | identificador_use . TOK_AUTOMULT exp
   48              | identificador_use . TOK_AUTODIV exp
   49              | identificador_use . TOK_INCREMENTO
   50              | identificador_use . TOK_DECREMENTO
   51 modulo_vector: identificador_use . TOK_MODULO_VECTOR exp
   52 elemento_vector: identificador_use . '[' exp ']'

    TOK_MODULO_VECTOR  shift, and go to state 102
    TOK_INCREMENTO     shift, and go to state 103
    TOK_DECREMENTO     shift, and go to state 104
    TOK_AUTOSUMA       shift, and go to state 105
    TOK_AUTORESTA      shift, and go to state 106
    TOK_AUTOMULT       shift, and go to state 107
    TOK_AUTODIV        shift, and go to state 108
    '['                shift, and go to state 109
    '='                shift, and go to state 110


State 66

   20 fn_declaration: fn_name '(' . parametros_funcion ')' '{' declaraciones_funcion

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    $default  reduce using rule 23 (parametros_funcion)

    tipo                go to state 111
    parametros_funcion  go to state 112
    parametro_funcion   go to state 113


State 67

   16 identificadores: identificador_new ',' identificadores .

    $default  reduce using rule 16 (identificadores)


State 68

   14 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']' .

    $default  reduce using rule 14 (clase_vector)


State 69

   21 fn_name: TOK_FUNCTION tipo identificador_use .

    $default  reduce using rule 21 (fn_name)


State 70

    1 programa: TOK_MAIN '{' iniciar declaraciones dec_vars funciones wrt_main sentencias . final '}'

    $default  reduce using rule 3 (final)

    final  go to state 114


State 71

   64 if_exp: TOK_IF '(' . exp ')' '{'

    TOK_IDENTIFICADOR     shift, and go to state 41
    TOK_CONSTANTE_ENTERA  shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    TOK_FALSE             shift, and go to state 75
    '-'                   shift, and go to state 76
    '!'                   shift, and go to state 77
    '('                   shift, and go to state 78
    '~'                   shift, and go to state 79

    elemento_vector    go to state 80
    exp                go to state 115
    llamada_funcion    go to state 82
    constante          go to state 83
    constante_logica   go to state 84
    constante_entera   go to state 85
    identificador_use  go to state 86


State 72

   70 lectura: TOK_SCANF identificador_use .

    $default  reduce using rule 70 (lectura)


State 73

  105 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 105 (constante_entera)


State 74

  103 constante_logica: TOK_TRUE .

    $default  reduce using rule 103 (constante_logica)


State 75

  104 constante_logica: TOK_FALSE .

    $default  reduce using rule 104 (constante_logica)


State 76

   79 exp: '-' . exp

    TOK_IDENTIFICADOR     shift, and go to state 41
    TOK_CONSTANTE_ENTERA  shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    TOK_FALSE             shift, and go to state 75
    '-'                   shift, and go to state 76
    '!'                   shift, and go to state 77
    '('                   shift, and go to state 78
    '~'                   shift, and go to state 79

    elemento_vector    go to state 80
    exp                go to state 116
    llamada_funcion    go to state 82
    constante          go to state 83
    constante_logica   go to state 84
    constante_entera   go to state 85
    identificador_use  go to state 86


State 77

   82 exp: '!' . exp

    TOK_IDENTIFICADOR     shift, and go to state 41
    TOK_CONSTANTE_ENTERA  shift, and go to state 73
    TOK_TRUE              shift, and go to state 74
    TOK_FALSE             shift, and go to state 75
    '-'                   shift, and go to state 76
    '!'                   shift, and go to state 77
    '('                   shift, and go to state 78
    '~'                   shift, and go to state 79

    elemento_vector    go to state 80
    exp                go to state 117
    llamada_funcion    go to state 82
    constante          go to state 83
    constante_logica   go to state 84
    constante_entera   go to state 85
    identificador_use  go to state 86


State 78

   86 exp: '(' . exp ')'
   87    | '(' . comparacion ')'
